--- a/.github/workflows/xapk.yml
+++ b/.github/workflows/xapk.yml
@@ -1,112 +1,125 @@
-name: Repack XAPK to APK (Emulator Fix)
+name: Repack XAPK and Clean Manifest
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # 允许手动点击按钮触发
   push:
     paths:
-      - 'res/6.1.0.zip.00*'
+      - 'res/6.1.0.zip.00*' # 监听文件变化
 
 jobs:
-  repack-sign-fix:
+  repack-clean-sign:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. 代码检出
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Java (Required for apktool & signer)
+      # 2. 环境准备 (Java 17 + Python)
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Install dependencies (7z, Apktool, Python)
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      # 3. 安装依赖工具 (7zip, Apktool)
+      - name: Install System Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y p7zip-full python3
+          sudo apt-get install -y p7zip-full
           
-          # 安装最新版 Apktool
+          # 手动安装最新版 Apktool (apt源版本过旧，不支持高版本Android)
           wget https://raw.githubusercontent.com/iBotPeaches/Apktool/master/scripts/linux/apktool -O apktool
           wget https://bitbucket.org/iBotPeaches/apktool/downloads/apktool_2.9.3.jar -O apktool.jar
           chmod +x apktool
           sudo mv apktool /usr/local/bin/
           sudo mv apktool.jar /usr/local/bin/
 
-      - name: Setup Android Build Tools
+      # 4. 配置 Android Build Tools (用于 zipalign 和 apksigner)
+      - name: Setup Android Tools
         run: |
-          # 找到 build-tools 并加入 PATH (用于 zipalign/apksigner)
+          # 自动寻找 build-tools 路径并加入 PATH
           BUILD_TOOLS_DIR=$(find $ANDROID_HOME/build-tools -maxdepth 1 -type d | sort -V | tail -n 1)
           echo "$BUILD_TOOLS_DIR" >> $GITHUB_PATH
 
-      - name: Prepare XAPK
+      # 5. 解压分卷 Zip 得到 XAPK
+      - name: Extract XAPK
         run: |
-          # 解压分卷 zip 得到 xapk
+          # 7z 会自动检测 .001, .002 并合并解压
           7z x res/6.1.0.zip.001 -o./
-          if [ ! -f "6.1.0.xapk" ]; then echo "XAPK extract failed"; exit 1; fi
+          
+          if [ ! -f "6.1.0.xapk" ]; then
+            echo "Error: 6.1.0.xapk extraction failed!"
+            exit 1
+          fi
 
+      # 6. 拉取转换工具代码
       - name: Checkout Converter Tool
         uses: actions/checkout@v4
         with:
           repository: LuigiVampa92/xapk-to-apk
           path: xapk-tool-repo
 
-      - name: Convert XAPK to APK (Initial Merge)
+      # 7. 运行转换脚本 (XAPK -> APK)
+      - name: Convert XAPK to APK
         run: |
-          # 第一步：先让工具完成繁琐的 Split 合并工作
+          echo "Running conversion..."
+          # 这一步会生成名为 6.1.0.apk 的文件
           python3 xapk-tool-repo/xapktoapk.py 6.1.0.xapk
           
-          # 重命名生成的 APK 以便后续处理
-          mv 6.1.0.apk initial_merge.apk
+          # 为了清晰，重命名中间产物
+          mv 6.1.0.apk temp_merged.apk
 
-      - name: Patch AndroidManifest for Emulator Compatibility
+      # 8. 【核心步骤】修改 Manifest (删除指定属性)
+      - name: Clean Manifest Attributes
         run: |
-          echo "Decompiling to patch manifest..."
-          # 1. 反编译合并后的 APK
-          apktool d -f initial_merge.apk -o decode_dir
-
-          cd decode_dir
+          echo "Decompiling..."
+          # 反编译
+          apktool d -f temp_merged.apk -o build_dir
           
-          # 2. 修改 AndroidManifest.xml
+          cd build_dir
+          echo "Patching AndroidManifest.xml..."
           
-          # 【关键修改1】将所有 'required="true"' 的硬件特性改为 "false"
-          # 这会欺骗模拟器说：虽然我用了这个功能（如触摸屏、相机），但不是必须的。
-          sed -i 's/android:required="true"/android:required="false"/g' AndroidManifest.xml
+          # 使用 sed 删除指定属性
+          # 1. 删除 android:isSplitRequired="true" (及任何值的该属性)
+          sed -i -E 's/android:isSplitRequired="[^"]*"//g' AndroidManifest.xml
           
-          # 【关键修改2】确保 application 标签包含 extractNativeLibs="true"
-          # 这有助于 ARM 转换层在 x86 模拟器上找到 .so 文件
-          if grep -q 'extractNativeLibs="false"' AndroidManifest.xml; then
-            sed -i 's/android:extractNativeLibs="false"/android:extractNativeLibs="true"/g' AndroidManifest.xml
-          elif ! grep -q 'extractNativeLibs' AndroidManifest.xml; then
-            # 如果不存在该属性，尝试在 application 标签末尾插入 (这是一个简单的正则替换，可能需要根据实际 manifest 调整)
-            sed -i 's/<application/<application android:extractNativeLibs="true"/g' AndroidManifest.xml
-          fi
+          # 2. 删除 android:requiredSplitTypes="base__abi" (及任何值的该属性)
+          sed -i -E 's/android:requiredSplitTypes="[^"]*"//g' AndroidManifest.xml
           
-          # 【可选】移除特定的不兼容特性标签 (如果上面的 required=false 不够用)
-          # sed -i '/android.hardware.telephony/d' AndroidManifest.xml
-
+          # 3. 删除 android:extractNativeLibs="true" (按要求删除)
+          sed -i -E 's/android:extractNativeLibs="[^"]*"//g' AndroidManifest.xml
+          
+          # 打印部分内容验证修改 (可选)
+          grep "application" AndroidManifest.xml || true
+          
           cd ..
           
-          echo "Rebuilding patched APK..."
-          # 3. 回编译
-          apktool b decode_dir -o 6.1.0-patched-unsigned.apk
+          echo "Rebuilding..."
+          # 回编译
+          apktool b build_dir -o 6.1.0-clean-unsigned.apk
 
-      - name: Sign APK (Default Debug Keystore)
+      # 9. 签名 (默认 Key)
+      - name: Sign APK
         run: |
-          # 生成 Keystore
+          # 生成临时 Debug Keystore
           keytool -genkey -v -keystore debug.keystore \
             -storepass android -alias androiddebugkey -keypass android \
             -keyalg RSA -keysize 2048 -validity 10000 \
             -dname "CN=Android Debug,O=Android,C=US"
 
-          # 签名 (同时会自动进行 zipalign)
+          # 签名 (输出最终文件)
           apksigner sign --ks debug.keystore --ks-pass pass:android \
-            --key-pass pass:android --out 6.1.0-final.apk 6.1.0-patched-unsigned.apk
-            
-          # 验证
-          apksigner verify 6.1.0-final.apk
+            --key-pass pass:android --out 6.1.0-repacked.apk 6.1.0-clean-unsigned.apk
 
+      # 10. 上传产物
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Repacked-Emulator-Friendly-APK
-          path: 6.1.0-final.apk
+          name: 6.1.0-Repacked-APK
+          path: 6.1.0-repacked.apk
